<resources>
    <string name="app_name">HealthMatic</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Admin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_signout">Sign Out</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="strArrayDetails">
        <item>@string/strMeds</item>
        <item>@string/strTests</item>
        <item>@string/strVitals</item>
        <item>@string/strNotes</item>
        <item>@string/strBio</item>
    </string-array>

    <string-array name="doctors_list">
        <item>Doctor 1</item>
        <item>Doctor 2</item>
        <item>Doctor 3</item>
        <item>Doctor 4</item>
        <item>Doctor 5</item>
    </string-array>

    <string-array name="nurse_list">
        <item>Doctor 1</item>
        <item>Doctor 2</item>
        <item>Doctor 3</item>
        <item>Doctor 4</item>
        <item>Doctor 5</item>
    </string-array>

    <string-array name="proviance_list">
        <item>Ontario</item>
        <item>Alberta</item>
        <item>British Columbia</item>
        <item>Quebec</item>
    </string-array>

    <string name="str_hint_EmailAddress">Username</string>
    <string name="str_hint_Password">Password</string>
    <string name="str_btn_Login">Log in</string>
    <string name="title_activity_nurse_patient_details">NursePatientDetailsActivity</string>

    <string name="title_activity_main_dr">My Patients</string>
    <string name="strRoom">Room #:</string>
    <string name="strPatients">Patients</string>
    <string name="strToday">Today</string>

    <string name="strVitals">Vitals</string>
    <string name="strTests">Tests</string>
    <string name="strMeds">Meds</string>
    <string name="strNotes">Notes</string>
    <string name="title_activity_patient_dr"></string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txtTemperature">Temperature:</string>
    <string name="strHeartRate">Heart Rate:</string>
    <string name="txtBloodPressure">Blood Pressure:</string>
    <string name="txtRespirationRate">Respiration Rate:</string>
    <string name="strLastCheckup">Last Checkup:</string>
    <string name="strAdmissionDate">Admission Date:</string>
    <string name="strSummary">Summary</string>
    <string name="strBio">Bio</string>
    <string name="strShelalaine">Shelalaine Chan</string>
    <string name="strCondition">Broken ribs</string>
    <string name="strRoomNumVal">500</string>
    <string name="strFrequency">Frequency: </string>
    <string name="strMedsName">Amoxicillin</string>
    <string name="strDosage">Dosage: </string>
    <string name="strDuration">Duration: </string>
    <string name="strPrescribedBy">Prescribed By: </string>
    <string name="strPrescriptionDate">Prescription Date: </string>
    <string name="strMedsDrName">Dr. John Smith</string>
    <string name="strRxDate">Nov 3, 2016, 9:00 AM</string>
    <string name="strMedsDosage">1 tablespoon</string>
    <string name="strMedsFrequency">3x daily</string>
    <string name="strMedsDurationVal">10 days</string>
    <string name="strCBC">CBC (Complete Blood Count)</string>
    <string name="strDateRequested">Date Requested:</string>
    <string name="strRequestedBy">Requested By:</string>
    <string name="strStatus">Status:</string>
    <string name="strOngoing">On-going</string>
    <string name="strSearchLabTestHint">Search laboratory tests</string>
    <string name="strSave">Save</string>
    <string name="strCancel">Cancel</string>
    <string name="strTestTypeDescription">Determines general health and screens for disorders such as anemia or infections, as well as nutritional status and toxic substance exposure.</string>
    <string name="strTestTypeCB">CBC (Complete Blood Count)</string>
    <string name="strMedicine">Medicine:</string>
    <string name="strMedsForm">Form</string>
    <string name="strNotedBy">Noted By:</string>
    <string name="strDate">Date:</string>
    <string name="strAddMedication">Add Medication</string>
    <string name="strAddLaboratoryTests">Add Laboratory Tests</string>
    <string name="strDateTaken">Date Taken:</string>
    <string name="strDays">days</string>
    <string name="strRespirationRate">Respiration Rate:</string>
    <string name="strBloodPressure">Blood Pressure:</string>
    <string name="strTemperature">Temperature:</string>
    <string name="strUnitRR">breaths/min</string>
    <string name="strUnitBpm">bpm</string>
    <string name="strUnitC">°C</string>
    <string name="strUnitmmHg">mmHg</string>
    <string name="strInfo">Info</string>
    <string name="strAddress">Address</string>
    <string name="strContact">Contact</string>
    <string name="strDateVal">--</string>
    <string name="strTempVal">-- C</string>
    <string name="strHRVal">--- bpm</string>
    <string name="strBPVal">--- / --- mmHg</string>
    <string name="strRespirationVal">-- breaths / min</string>


    <string name="strRetroFitFailureMsg">Data was not successfully fetch from server. Please try again.</string>
    <string name="strDr">Dr.</string>
    <string name="strSingle">Single</string>
    <string name="strMarried">Married</string>
    <string name="strMale">Male</string>
    <string name="strFemale">Female</string>
    <string name="strBirthday">Birthday:</string>
    <string name="strGender">Gender:</string>
    <string name="strWeight">Weight:</string>
    <string name="strHeight">Height:</string>
    <string name="strBloodType">Blood Type:</string>
    <string name="strMaritalStatus">Marital Status:</string>
    <string name="strUnitWeight">lbs</string>
    <string name="strUnitHeight">cm</string>
    <string name="strEmergencyName">Emergency Name:</string>
    <string name="strEmergencyPhone">EmergencyPhone:</string>
    <string name="strEmail">Email:</string>
    <string name="strPhone">Phone:</string>
    <string name="strInvalidLogin">Invalid Username/Password. Please try again.</string>
    <string name="strEnterValidEmail">Enter a valid email address</string>
    <string name="strEnterPassword">Enter password</string>
    <string name="strAuthenticating">Authenticating...</string>
    <string name="strUserLoginSuccessful">user login successful.</string>
    <string name="strUserLoginUnsuccessful">user login unsuccessful.</string>
    <string name="strErrorDrInput">Please provide doctor\'s name.</string>
    <string name="strHintNameofDoctor">Enter name of doctor</string>
    <string name="strSpecialization">Specialization</string>
    <string name="strContactNum">Contact #:</string>
    <string name="strDoctors">Doctors:</string>
    <string name="strNurses">Nurses:</string>
    <string name="strHintNameOfMeds">Enter name</string>
    <string name="strAddVitals">Add Vitals</string>
    <string name="strAddNotes">Add Notes</string>
    <string name="strAddDoctor">Add Doctor</string>
    <string name="strPatientsForCheckup">patients for checkup</string>
    <string name="strPatientForCheckup">patient for checkup</string>
    <string name="strCheckupsDone">checkups done</string>
    <string name="strCheckupDone">checkup done</string>
    <string name="strThisIsRequired">This is required.</string>
    <string name="strErrorMsgVitals">Input at least one vital.</string>
    <string name="strErrorMsgTests">There is nothing to save.</string>
    <string name="strDischarge">Discharge</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>

    <string name="strCheckDone">Checks performed</string>

</resources>
