<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:foreground="?selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <TextView
            android:id="@+id/tvMedsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/strMedsName"
            />

        <TextView
            android:id="@+id/tvMedsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/tvMedsName"
            android:textStyle="italic"
            android:textSize="16sp"
            tools:text="125 mg / 5 ml Suspension (150 mL)"
            />

        <TextView
            android:id="@+id/tvMedsDosage"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMedsName"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:text="@string/strDosage"
            />

        <TextView
            android:id="@+id/tvMedsDosageVal"
            android:paddingTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMedsName"
            android:layout_toEndOf="@id/tvMedsDosage"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            tools:text="@string/strMedsDosage"
            />

        <TextView
            android:id="@+id/tvsMedsFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMedsDosage"
            android:layout_alignLeft="@id/tvMedsDosage"
            android:layout_alignRight="@id/tvMedsDosage"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:text="@string/strFrequency"
            android:layout_alignBottom="@+id/tvsMedsFrequencyVal" />

        <TextView
            android:id="@+id/tvsMedsFrequencyVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMedsDosage"
            android:layout_toEndOf="@id/tvsMedsFrequency"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            tools:text="@string/strMedsFrequency"
            />

        <TextView
            android:id="@+id/tvMedsDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="14sp"
            android:text="@string/strDuration"
            android:layout_alignBaseline="@+id/tvMedsDurationVal"
            android:layout_alignBottom="@+id/tvMedsDurationVal"
            android:layout_alignLeft="@id/tvMedsDosage"
            android:layout_alignRight="@id/tvMedsDosage"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvMedsDurationVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvsMedsFrequency"
            android:layout_toEndOf="@id/tvMedsDuration"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            tools:text="@string/strMedsDurationVal"
            />


        <TextView
            android:id="@+id/tvMedsRxDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:text="@string/strPrescriptionDate"
            android:layout_alignBaseline="@+id/tvMedsRxDateVal"
            android:layout_alignBottom="@+id/tvMedsRxDateVal"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/tvMedsRxDateVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_below="@id/tvMedsDuration"
            android:layout_toEndOf="@id/tvMedsRxDate"
            android:textSize="14sp"
            tools:text="@string/strRxDate"
            />

        <TextView
            android:id="@+id/tvMedsPrescribedBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:layout_below="@id/tvMedsRxDate"
            android:layout_alignRight="@id/tvMedsRxDate"
            android:layout_alignLeft="@id/tvMedsRxDate"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:text="@string/strPrescribedBy"
            />

        <TextView
            android:id="@+id/tvMedsDrName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMedsRxDateVal"
            android:layout_toEndOf="@id/tvMedsPrescribedBy"
            android:textSize="14sp"
            tools:text="@string/strMedsDrName"
            />

    </RelativeLayout>


</android.support.v7.widget.CardView>