<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:paddingTop="40dp"
    android:paddingLeft="16dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@mipmap/user_female"
            android:paddingTop="10dp"
            android:layout_alignParentStart="true"
            android:id="@+id/ivPic" />

        <RelativeLayout
            android:id="@+id/rlVitalsSummary"
            android:layout_toEndOf="@id/ivPic"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/txtRespirationRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/patient_overview_text"
                android:id="@+id/tvRR" />

            <TextView
                android:text="@string/strRespirationVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_toEndOf="@id/tvRR"
                style="@style/patient_overview_text"
                android:id="@+id/tvRRVal"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/txtBloodPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                android:paddingTop="2dp"
                android:layout_below="@id/tvRR"
                style="@style/patient_overview_text"
                android:id="@+id/tvBP" />

            <TextView
                android:text="@string/strBPVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                android:layout_below="@id/tvRRVal"
                android:layout_toEndOf="@id/tvBP"
                style="@style/patient_overview_text"
                android:id="@+id/tvBPVal"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/strHeartRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                android:paddingTop="2dp"
                android:id="@+id/tvHR"
                style="@style/patient_overview_text"
                android:layout_below="@id/tvBP" />

            <TextView
                android:text="@string/strHRVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                android:layout_below="@id/tvBPVal"
                android:layout_toEndOf="@id/tvHR"
                style="@style/patient_overview_text"
                android:id="@+id/tvHRVal"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/txtTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:layout_below="@id/tvHR"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                style="@style/patient_overview_text"
                android:id="@+id/tvTemp" />

            <TextView
                android:text="@string/strTempVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                android:layout_toEndOf="@id/tvTemp"
                android:layout_below="@id/tvHRVal"
                style="@style/patient_overview_text"
                android:id="@+id/tvTempVal"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/strDateTaken"
                style="@style/patient_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvRR"
                android:layout_alignRight="@id/tvRR"
                android:paddingTop="2dp"
                android:layout_below="@id/tvTemp"
                android:id="@+id/tvLastCheck" />

            <TextView
                android:text="@string/strDateVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvLastCheck"
                android:layout_below="@id/tvTemp"
                android:paddingTop="2dp"
                android:paddingLeft="10dp"
                style="@style/patient_overview_text"
                android:id="@+id/tvLastCheckVal" />
        </RelativeLayout>

        <RelativeLayout
            android:paddingTop="10dp"
            android:layout_toEndOf="@id/ivPic"
            android:paddingLeft="10dp"
            android:layout_below="@id/rlVitalsSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/strAdmissionDate"
                style="@style/patient_overview_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAdmissionDate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tvAdmissionDate"
                android:paddingLeft="10dp"
                style="@style/patient_overview_text"
                android:id="@+id/tvAdmissionDateVal" />
        </RelativeLayout>
    </RelativeLayout>



</LinearLayout>