<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/rlDischarge"
    android:layout_height="match_parent">
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvDescription"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDescription"
        android:id="@+id/rgDischarge">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbNo"
            android:text="@string/strNo"/>

        <RadioButton
            android:text="@string/strYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbYes"
            android:layout_weight="1" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/llTestCancelAdd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:weightSum="1"
        android:layout_below="@id/rgDischarge">

        <Button
            android:text="@string/strCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/bCancel" />

        <Button
            android:text="@string/strSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/bSave" />
    </LinearLayout>
</RelativeLayout>