<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <ImageView
            android:id="@+id/ivTestResult"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_menu_camera"
            android:tint="@color/iron" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivTestResult">

            <TextView
                android:id="@+id/tvTestName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textSize="16sp"
                android:textStyle="normal|bold"
                tools:text="@string/strCBC" />

            <TextView
                android:id="@+id/tvTestRequestedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTestName"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/strDateRequested"
                android:textSize="14sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tvTestRequestedDateVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTestName"
                android:layout_toEndOf="@id/tvTestRequestedDate"
                android:paddingTop="5dp"
                android:textSize="14sp"
                tools:text="@string/strRxDate" />

            <TextView
                android:id="@+id/tvTestRequestedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvTestRequestedDate"
                android:layout_alignRight="@id/tvTestRequestedDate"
                android:layout_below="@id/tvTestRequestedDate"
                android:text="@string/strRequestedBy"
                android:textSize="14sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tvTestRequestedByName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTestRequestedDateVal"
                android:layout_toEndOf="@id/tvTestRequestedBy"
                android:textSize="14sp"
                tools:text="@string/strMedsDrName" />

            <TextView
                android:id="@+id/tvTestStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/tvTestRequestedDate"
                android:layout_alignRight="@id/tvTestRequestedDate"
                android:layout_below="@id/tvTestRequestedBy"
                android:paddingTop="5dp"
                android:text="@string/strStatus"
                android:textSize="14sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/tvTestStatusVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTestRequestedByName"
                android:layout_toEndOf="@id/tvTestRequestedBy"
                android:paddingTop="5dp"
                android:textSize="14sp"
                tools:text="@string/strOngoing" />
        </RelativeLayout>
    </RelativeLayout>


</android.support.v7.widget.CardView>