<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_meds"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spy.healthmatic.Doctor.AddMedsActivity">

    <LinearLayout
        android:id="@+id/llMedsInName"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:text="@string/strMedicine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="0.35"
            android:id="@+id/tvMedsInName"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_weight="0.65"
            android:hint="@string/strHintNameOfMeds"
            android:id="@+id/etMedsInName"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMedsFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@id/llMedsInName">
        <TextView
            android:text="@string/strFrequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:id="@+id/tvsMedsFrequency"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:inputType="text"
            android:ems="10"
            android:hint="Enter frequency"
            android:id="@+id/etMedsFrequency"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMedsInDosage"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@id/llMedsFrequency">

        <TextView
            android:text="@string/strDosage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/tvMedsInDosage"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:inputType="text"
            android:ems="10"
            android:hint="Enter dosage"
            android:id="@+id/etMedsInDosage"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMedsInDuration"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@id/llMedsInDosage">
        <TextView
            android:text="@string/strDuration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:layout_below="@id/llMedsInDosage"
            android:layout_alignParentStart="true"
            android:id="@+id/tvMedsInDuration"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="3"
            android:id="@+id/etDurationVal"
            android:layout_weight="0.4"
            android:textSize="14sp"/>

        <TextView
            android:text="@string/strDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="14sp"
            android:layout_weight=".25" />

    </LinearLayout>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:id="@+id/sbMedsInDuration"
        android:max="100"
        android:progress="0"
        android:paddingTop="15dp"
        android:layout_below="@id/llMedsInDuration"
        android:layout_gravity="bottom" />

    <LinearLayout
        android:id="@+id/llTestCancelAdd"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:weightSum="1"
        android:layout_below="@id/sbMedsInDuration">

        <Button
            android:text="@string/strCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/bTestCancel" />

        <Button
            android:text="@string/strSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/bTestAdd" />
    </LinearLayout>

</RelativeLayout>
