<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:foreground="?selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp" >

        <ImageView
            android:id="@+id/ivStaff"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:src="@mipmap/user_female"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"/>

        <TextView
            android:id="@+id/tvStaffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivStaff"
            android:layout_alignParentTop="true"
            android:textSize="16sp"
            tools:text="@string/strShelalaine"
            />

        <TextView
            android:id="@+id/tvSpecialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivStaff"
            android:layout_below="@id/tvStaffName"
            android:textSize="14sp"
            tools:text="@string/strCondition"
            />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/ivStaff"
            android:layout_below="@id/tvSpecialization"
            android:textSize="12sp"
            android:text="@string/strContactNum"
            />

        <TextView
            android:id="@+id/tvContactNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvContact"
            android:layout_below="@id/tvSpecialization"
            android:textSize="12sp"
            tools:text="@string/strRoomNumVal"
            />
    </RelativeLayout>


</android.support.v7.widget.CardView>